Fix. Fixed the webpagr alignment.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body{
     height: 96vh;
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 10% auto 10%;
+    grid-template-rows: 10% 82% 10%;
     /* border: solid 5px black; */
 }
 header{
@@ -24,6 +24,7 @@ header ul li{
     display: inline-block;
     list-style: none;
     padding: 8px;
+    font-weight: bold;
     background-color: white;
     /* color: black; */
 
@@ -31,17 +32,18 @@ header ul li{
 section{
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 35% 65%;
+    grid-template-rows: 30% 70%;
     border: solid 5px black;
     background-color: #f5efdf;
     border-bottom: 0;
 }
 section div h1{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     /* width: 50%; */
     font-size: 40px;
+    margin: 0;
 
 }
 section div img{
@@ -53,45 +55,48 @@ section div img{
     grid-column: 1/3;
 }
 .title{
-    display:block;
+    display:flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
     overflow: hidden;
     margin: 0;
     background-color: white;
-    line-height: 100%;
-    text-align: center;
     border-right: solid 5px black;
     border-bottom:solid  5px black;
-    font-size: larger;
-    font-weight: bold;
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 0px;
+}
+section div h2{
+    margin: 6%;
 }
 .design{
     letter-spacing: 2px;
 }
 .your{
-    letter-spacing: 6px;
+    letter-spacing: 8px;
 }
 .life{
-    letter-spacing: 10px;
+    letter-spacing: 12px;
 }
 .podcast{
     border-bottom:solid  5px black;
-    /* border: 5px solid black; */
     border-top: 0;
     border-left: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    /* justify-content: flex-start; */
-    /* gap:20%; */
+    justify-content: flex-start;
     overflow: hidden;
+    line-height: 0;
 }
 .MainSideImage
 {
     /* border: 5px solid black; */
     /* border-top: 0; */
     grid-column: 1/3;
-    object-fit: cover; 
+    object-fit:contain; 
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -105,11 +110,10 @@ section div img{
 }
 section div h1{
     margin: 0;
+    font-size: 32px;
+    line-height: 260%;
 }
-section div h4{
-    margin: 0;
-    
-}
+
 
 /* section-------> */
 
@@ -123,19 +127,61 @@ aside{
     border-bottom: 0;
 
 }
+aside div u{
+    font-weight: bold;
+}
 .TheBook{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
     border-bottom: solid 5px black;
     grid-column: 1/3;
+    line-height: 340%;
 
+}
+.BookImage
+{
+    display: flex;
+    justify-content: center;
+    height: 70%;
+    width: 100%;
 }
 
 .Synopsis{
     border-right: solid 5px black;
     grid-row: 2/4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    padding-top:10px;
+    font-weight: bold;
+}
+aside div span{
+    text-decoration: underline;
+    font-weight: bold;
+}
+.Synopsis h2{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    width: 80%;
+    padding-top: 20px;
 }
 .Author{
     border-bottom: solid 5px black;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    margin: 0;
+    padding-top: 10px;
 }
+
 .Shop{
     display: grid;
     grid-template-columns: 25% 25% 50%;
@@ -173,6 +219,13 @@ aside div i{
     border-right: solid 5px black;
 
 }
+.ShopHeading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 25px;
+}
 footer{
     display: grid;
     grid-template-columns: 50% 50%;
@@ -182,4 +235,20 @@ footer{
 }
 .DesignBy{
     border-right: solid 5px black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size:12px ;
 }
+.ViewEvents{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 25px;
+}
+    /* display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column; */
